cleanup a bunch of javadoc related to all of the various config stores in the API.